--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no,">
         <title>Monthly$Payments€Keeper£App</title>
-        <link rel="icon" type="image/ico" href="/images/favicon.ico" />
+        <link rel="icon" type="image/ico" href="/images/favicon.jpg" />
         <link rel="stylesheet" type="text/css" href="/styles.css"/>
     </head>
     <body>
